[gd_scene load_steps=3 format=3 uid="uid://ruaai2xhsxvp"]

[ext_resource type="Script" path="res://scripts/mainmenu.gd" id="1_el5u1"]
[ext_resource type="Texture2D" uid="uid://g8eerc14a7ls" path="res://textures/test_00.png" id="2_tk455"]

[node name="control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_el5u1")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.215686, 0.215686, 0.215686, 1)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tk455")

[node name="boxcontainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
vertical = true

[node name="hbox_top" type="HBoxContainer" parent="boxcontainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="vbox_left" type="VBoxContainer" parent="boxcontainer/hbox_top"]
layout_mode = 2
size_flags_horizontal = 3

[node name="vbox_mid" type="VBoxContainer" parent="boxcontainer/hbox_top"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="title" type="Label" parent="boxcontainer/hbox_top/vbox_mid"]
layout_mode = 2
text = "BROWSER ZOMBIES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="vbox_right" type="VBoxContainer" parent="boxcontainer/hbox_top"]
layout_mode = 2
size_flags_horizontal = 3

[node name="hbox_mid" type="HBoxContainer" parent="boxcontainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="vbox_left" type="VBoxContainer" parent="boxcontainer/hbox_mid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="vbox_mid" type="VBoxContainer" parent="boxcontainer/hbox_mid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="padding2" type="HSeparator" parent="boxcontainer/hbox_mid/vbox_mid"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="start" type="Button" parent="boxcontainer/hbox_mid/vbox_mid"]
layout_mode = 2
text = "START"

[node name="padding" type="HSeparator" parent="boxcontainer/hbox_mid/vbox_mid"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="map_selector" type="OptionButton" parent="boxcontainer/hbox_mid/vbox_mid"]
layout_mode = 2
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "Sen Dolta"
popup/item_0/id = 0
popup/item_1/text = "test"
popup/item_1/id = 1

[node name="padding3" type="HSeparator" parent="boxcontainer/hbox_mid/vbox_mid"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="settings" type="Button" parent="boxcontainer/hbox_mid/vbox_mid"]
layout_mode = 2
text = "SETTINGS"

[node name="padding4" type="HSeparator" parent="boxcontainer/hbox_mid/vbox_mid"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="quit" type="Button" parent="boxcontainer/hbox_mid/vbox_mid"]
layout_mode = 2
text = "QUIT"

[node name="vbox_right" type="VBoxContainer" parent="boxcontainer/hbox_mid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="hbox_bot" type="HBoxContainer" parent="boxcontainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="vbox_left" type="VBoxContainer" parent="boxcontainer/hbox_bot"]
layout_mode = 2
size_flags_horizontal = 3

[node name="vbox_mid" type="VBoxContainer" parent="boxcontainer/hbox_bot"]
layout_mode = 2
size_flags_horizontal = 3

[node name="vbox_right" type="VBoxContainer" parent="boxcontainer/hbox_bot"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="boxcontainer/hbox_mid/vbox_mid/start" to="." method="_on_start_pressed"]
[connection signal="item_selected" from="boxcontainer/hbox_mid/vbox_mid/map_selector" to="." method="_on_map_selector_item_selected"]
[connection signal="pressed" from="boxcontainer/hbox_mid/vbox_mid/quit" to="." method="_on_quit_pressed"]
